fix overflow and show highlights

--- a/src/components/PickButton/PickButton.scss
+++ b/src/components/PickButton/PickButton.scss
@@ -1,10 +1,10 @@
 button {
-
   &:disabled {
     cursor: default;
   }
-  
+
   .pick-button {
+    z-index: 2;
     height: 200px;
     width: 200px;
     border-radius: 50%;
@@ -58,5 +58,27 @@ button {
       -webkit-box-shadow: inset 0 8px 0 #00000023;
       box-shadow: inset 0 8px 0 #00000023;
     }
+  }
+
+  .circle {
+    width: 200px;
+    height: 200px;
+    background: #fff;
+    opacity: 0.05;
+    position: absolute;
+    top: 0;
+    border-radius: 50%;
+    z-index: -2;
+    pointer-events: none;
+    transition: 0.5s all ease-in-out;
+  }
+  .expand-sm {
+    transform: scale(1.5);
+  }
+  .expand-md {
+    transform: scale(2);
+  }
+  .expand-lg {
+    transform: scale(2.5);
   }
 }
