--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+  overflow: hidden;
 }
 
 code {
@@ -16,6 +17,6 @@ code {
 }
 
 .App {
-  min-height: 100vh;
-  overflow: auto;
+  height: 100vh;
+  width: 100%;
 }
